--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -14,13 +14,12 @@
       "command": "yarn start",
       "runAtStart": true,
       "preview": {
-        "port": 1234
+        "port": 3000
       }
     },
     "build": {
       "name": "build",
-      "command": "yarn build",
-      "runAtStart": false
+      "command": "yarn build"
     }
   }
 }
