--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "vanilla-parcel-2",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html"
+  "dependencies": {
+    "package-json": "^9.0.0"
   },
-  "devDependencies": {
-    "parcel": "^2.0.0"
-  },
-  "keywords": []
+  "license": "(MIT OR Apache-2.0)"
 }
