--- a/package.json
+++ b/package.json
@@ -2,5 +2,6 @@
   "dependencies": {
     "package-json": "^9.0.0"
   },
-  "license": "(MIT OR Apache-2.0)"
+  "license": "(MIT OR Apache-2.0)",
+  "name": "bloomies-edi"
 }
