Working on the 856
Recent Upgrades. Will need to reset to 810 for redo of loop

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/src/Nordstrom_Outbound_810_Orderful_v3.mjs"
+            "runtimeArgs": ["--experimental-modules"],
+            "program": "${workspaceFolder}/src/Nordstrom_Outbound_856_Orderful_v3.mjs"
         }
     ]
 
